--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -30,6 +30,7 @@ gem install windows-pr -v 1.2.6; \
 gem install aws-sdk-cloudwatchlogs; \
 gem install fluent-plugin-concat; \
 gem install fluent-plugin-rewrite-tag-filter; \
+gem install fluent-plugin-kubernetes_metadata_filter; \
 gem install fluent-plugin-multi-format-parser; \
 gem install fluent-plugin-cloudwatch-logs; \
 gem sources --clear-all; \
