--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/windows/servercore:10.0.17763.2183 as base
+FROM mcr.microsoft.com/windows/servercore:ltsc2019 as base
 
 #Set powershell as default shell
 SHELL ["powershell", "-NoLogo", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
@@ -8,8 +8,8 @@ RUN Set-ExecutionPolicy Bypass -Scope Process -Force; \
     iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
 #Install ruby and msys2 with chocolatey
-RUN choco install -y ruby --version 2.6.5.1 --params "'/InstallDir:C:\ruby26'"; \
-    choco install -y msys2 --params "'/NoPath /NoUpdate /InstallDir:C:\ruby26\msys64'"
+RUN choco install -y ruby --version 2.6.5.1 --params "'/InstallDir:C:\ruby26'" \
+&& choco install -y msys2 --version 20210604.0.0 --params "'/NoPath /NoUpdate /InstallDir:C:\ruby26\msys64'"
 
 #Install Ruby gems from fluentd Dockerfile + aws-sdk-cloudwatchlogs + Fluent plugins to parse and rewrite the logs
 RUN refreshenv; \
@@ -29,16 +29,16 @@ gem install win32-event -v 0.6.3; \
 gem install windows-pr -v 1.2.6; \
 gem install aws-sdk-cloudwatchlogs; \
 gem install fluent-plugin-concat; \
+gem install fluent-plugin-kubernetes_metadata_filter; \
 gem install fluent-plugin-rewrite-tag-filter; \
 gem install fluent-plugin-multi-format-parser; \
 gem install fluent-plugin-cloudwatch-logs; \
 gem install fluent-plugin-firehose; \
-gem install fluent-plugin-kubernetes_metadata_filter; \
 gem sources --clear-all; \
 Remove-Item -Force C:\ruby26\lib\ruby\gems\2.6.0\cache\*.gem; \
 Remove-Item -Recurse -Force C:\ProgramData\chocolatey
 
-FROM mcr.microsoft.com/windows/servercore:10.0.17763.2183
+FROM mcr.microsoft.com/windows/servercore:ltsc2019
 
 COPY --from=base /ruby26 /ruby26
 
